# franka_ros2_language_based_manipulator

./: .gitignore  README.md
frontend/: index.html  script.js  style.css
hmi_pkg/: Dockerfile  docker-compose.yml  hmi_pkg_readme.md  requirements.txt
hmi_pkg/config/: capabilities.json
hmi_pkg/nodes/: asr_whisper.py  audio_utils.py  config.py  debug_asr.py  hmi_server.py  nlu_engine.py  ros_bridge.py  state.py  vad.py  websocket_handler.py
hmi_pkg/public/: index.html
hmi_pkg/tests/: mic_test.py
hri_evaluation/: .~lock.DOCUMENTATION.md#  .~lock.Dum-E_Answers.xlsx#  .~lock.Dum-E_Answers_new.xlsx#  .~lock.analysis_report.txt#  DOCUMENTATION.md  Dum-E_Answers.xlsx  Dum-E_Answers_new.xlsx  hri_analysis.py
hri_evaluation/hri_results/: analysis_report.txt  processed_data.csv  results.json
hri_evaluation/hypothesis_output/: Hypothesis_Analysis_Report.txt  processed_data.csv  results.json
monitor_cpp/: CMakeLists.txt  package.xml
monitor_cpp/launch/: move_robot.launch.py
monitor_cpp/src/: move_to_pose.cpp  pose_monitor.cpp
monitor_py/: package.xml  setup.cfg  setup.py
shared/: sequence.json
vision_module/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
vision_module/config/: tools.json  yolo.yaml
vision_module/launch/: vision.launch.py  vision_launch.py
vision_module/src/vision_module/: vision_node.py  yolo_detector.py  yolo_detector_ultralytics.py
vision_module/src/vision_module/aruco/: extrinsinc_calibration.py
vision_module/src/vision_module/publishers/: object_publisher.py
vision_module/src/vision_module/types/: __init__.py
vision_module/src/vision_module/utils/: transforms.py
vision_module/tests/: test_detection.py
