[metadata]
name = vision_module
version = 0.1.0
description = A ROS 2 package for object detection using YOLO.
author = Your Name
author_email = your.email@example.com
license = MIT
packages = find:
install_requires =
    opencv-python
    torch
    torchvision
    numpy
    rclpy
    sensor_msgs
    std_msgs
    image_transport
    cv_bridge
python_requires = >=3.6
zip_safe = false

[options.packages.find]
where = src